welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:21: error: ')' expected but ';' found.
	if (x=16*4; x=16*4*2; x=16*4*3; x=16*4*4; x=16*4*5; x=16*4*6; x=16*4*7) {
                  ^Runner:21: error: ';' expected but ')' found.
	if (x=16*4; x=16*4*2; x=16*4*3; x=16*4*4; x=16*4*5; x=16*4*6; x=16*4*7) {
                                                                              ^